# michigrad

./: pyproject.toml  xor_training_lineal.py  xor_training_no_lineal.py
.github/: copilot-instructions.md
michigrad/: engine.py  nn.py
